20220704_반응형 수정

--- a/index.html
+++ b/index.html
@@ -454,23 +454,28 @@
             </div>
             <div class="photoBox photo2">
                 <div class="performancePhoto">
-                    <a href="postblog.html" class="photo_2"><img src="img/index/art_center_text.jpg" alt="art" class="fade2"></a>
+                    <a href="postblog.html" class="photo_2"><img src="img/index/art_center_text.jpg" alt="art"
+                            class="fade2"></a>
                 </div>
                 <div class="performancePhoto">
-                    <a href="postblog.html"><img src="img/index/art_ciqq_text.jpg" alt="art" class="photo_2 photoPadding fade3"></a>
+                    <a href="postblog.html"><img src="img/index/art_ciqq_text.jpg" alt="art"
+                            class="photo_2 photoPadding fade3"></a>
                 </div>
             </div>
             <div class="photoBox photo3">
                 <div class="performancePhoto">
-                    <a href="postblog.html"><img src="img/index/art_festival_text.jpg" alt="art" class="photo_3 fade4"></a>
+                    <a href="postblog.html"><img src="img/index/art_festival_text.jpg" alt="art"
+                            class="photo_3 fade4"></a>
                 </div>
                 <div class="performancePhoto">
-                    <a href="postblog.html"><img src="img/index/art_kk_musium_text.jpg" alt="art" class="photo_3 fade5"></a>
+                    <a href="postblog.html"><img src="img/index/art_kk_musium_text.jpg" alt="art"
+                            class="photo_3 fade5"></a>
                 </div>
             </div>
             <div class="photoBox photo4">
                 <div class="performancePhoto">
-                    <a href="postblog.html"><img src="img/index/art_musium_text.jpg" alt="art" class="photo_4 fade6"></a>
+                    <a href="postblog.html"><img src="img/index/art_musium_text.jpg" alt="art"
+                            class="photo_4 fade6"></a>
                 </div>
             </div>
         </div>
