--- a/postblog.html
+++ b/postblog.html
@@ -73,53 +73,55 @@
                     </span>
                     <br>
                     <br>
-                    <p>
                     <h3>TRACK1</h3>
                     <h4>과거와 현재가 공존하는 '나포리 음악다방'</h4>
-                    과거 음악다방은 당시 노동자들이 퇴근길에 들러 음악을 들으며 노동으로
-                    지친 마음을 달래던 청춘들의 꿈과 사랑이 빛나는 즐거움이 공존했던 장소였다.
-                    지금은 거의 사라지다시피 했지만 '나포리 다방'으로 불렸던 이곳은 지금도
-                    '나포리 커피숍'이란 이름으로 남아 당시의 분위기를 조금이나마 느낄 수 있게
-                    해준다. 오랜 세월 동네를 지키며 한때 누군가의 아지트였던 실존하는
-                    '나포리 음악다방'을 배경으로 허구의 이야기이지만 있을 수 있었던,
-                    지금도 있을 수 있는 대한민국 청춘들의 과거와 현재, 미래가 소통하는
-                    이야기를 하고자 한다.
+                    <p>
+                        과거 음악다방은 당시 노동자들이 퇴근길에 들러 음악을 들으며 노동으로
+                        지친 마음을 달래던 청춘들의 꿈과 사랑이 빛나는 즐거움이 공존했던 장소였다.
+                        지금은 거의 사라지다시피 했지만 '나포리 다방'으로 불렸던 이곳은 지금도
+                        '나포리 커피숍'이란 이름으로 남아 당시의 분위기를 조금이나마 느낄 수 있게
+                        해준다. 오랜 세월 동네를 지키며 한때 누군가의 아지트였던 실존하는
+                        '나포리 음악다방'을 배경으로 허구의 이야기이지만 있을 수 있었던,
+                        지금도 있을 수 있는 대한민국 청춘들의 과거와 현재, 미래가 소통하는
+                        이야기를 하고자 한다.
                     </p>
 
                     <br><br>
-                    <p>
+
                     <h3>TRACK2</h3>
                     <h4>대세는 복고! 그 시절 우리를 설레게 한 추억의 음악!</h4>
-                    고고장에 모여 춤을 추고, 음악다방에서 음악을 들으며 포크송과 대중가요를 즐기던
-                    80년대...<br>그 시절의 노래, 좋아했던 장소, 나를 두근거리게 했던 가수들, 인생의
-                    한때를 아름답게 해주었던 과거의 마음 따뜻한 추억을 모든 관객에게 선사할 예정이다.
-                    오리지널 음악과 뉴트로 감성의 리메이크 음악을 모두 다루어 그때 그 시절 청춘들과
-                    지금 우리 청춘들이 함께 감성으로 소통할 수 있는 장이 되길 바란다.
+                    <p>
+                        고고장에 모여 춤을 추고, 음악다방에서 음악을 들으며 포크송과 대중가요를 즐기던
+                        80년대...<br>그 시절의 노래, 좋아했던 장소, 나를 두근거리게 했던 가수들, 인생의
+                        한때를 아름답게 해주었던 과거의 마음 따뜻한 추억을 모든 관객에게 선사할 예정이다.
+                        오리지널 음악과 뉴트로 감성의 리메이크 음악을 모두 다루어 그때 그 시절 청춘들과
+                        지금 우리 청춘들이 함께 감성으로 소통할 수 있는 장이 되길 바란다.
                     </p>
 
                     <br><br>
-                    <p>
+
                     <h3>TRACK3</h3>
                     <h4>웃음과 감동의 힐링 추억여행</h4>
-                    무언가 멈춰버린 것 같은 요즘, 단절된 관계에서 오는 스트레스가 일상이 되어버린
-                    현대인에게 선보일 푸근한 음악다방의 풍경은 따뜻한 웃음을 불러온다.
-                    이를 통해 숨 가빴던 산업화 시대가 우리에게 남긴 유산들을 되새김질하며 이 시대를
-                    살아가는 당신에게 감동과 위로를 선사한다.
+                    <p>
+                        무언가 멈춰버린 것 같은 요즘, 단절된 관계에서 오는 스트레스가 일상이 되어버린
+                        현대인에게 선보일 푸근한 음악다방의 풍경은 따뜻한 웃음을 불러온다.
+                        이를 통해 숨 가빴던 산업화 시대가 우리에게 남긴 유산들을 되새김질하며 이 시대를
+                        살아가는 당신에게 감동과 위로를 선사한다.
                     </p>
 
                     <br><br>
                     <div class="synopsis">
-                        <p>
                         <h3>SYNOPSIS</h3>
-                        아버지가 돌아가신 후, 방치되어있던 음악다방에 모여 유언을 개봉하는데...<br>
-                        유언은 미처 전해주지 못했던 편지의 주인을 찾아주고,
-                        그 사람을 위한 신청곡을 틀어주라는 것! 마치 DJ처럼...<br><br>
+                        <p>
+                            아버지가 돌아가신 후, 방치되어있던 음악다방에 모여 유언을 개봉하는데...<br>
+                            유언은 미처 전해주지 못했던 편지의 주인을 찾아주고,
+                            그 사람을 위한 신청곡을 틀어주라는 것! 마치 DJ처럼...<br><br>
 
-                        누구든 그날의 주인공을 만들어주는 사연 읽기의 달인 DJ 오빠,<br>
-                        대학교에 가서 대학가요제에 나가는 게 꿈인 야간반 여고생,<br>
-                        입시학원 강사였지만 지금 방범대원인 다방 죽돌이...등<br>
-                        손님들의 숨겨진 이야기가 하나 둘 튀어나오기 시작하는데...?!<br>
-                        그들이 다시 만들어내는 뉴트로 음악다방 이야기!<br>
+                            누구든 그날의 주인공을 만들어주는 사연 읽기의 달인 DJ 오빠,<br>
+                            대학교에 가서 대학가요제에 나가는 게 꿈인 야간반 여고생,<br>
+                            입시학원 강사였지만 지금 방범대원인 다방 죽돌이...등<br>
+                            손님들의 숨겨진 이야기가 하나 둘 튀어나오기 시작하는데...?!<br>
+                            그들이 다시 만들어내는 뉴트로 음악다방 이야기!<br>
                         </p>
                     </div>
 
@@ -186,8 +188,7 @@
                             <span class="favicon">&nbsp;2022년 7월2일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                         </span>
                         <p>예매는 안산문화예술의전당 사이트에 회원가입을 하신 후,<br>
-                        예매하기 버튼을 클릭 후 이용하실 수 있습니다~ 좋은 공연 관람 되세요:)</p>
-                        <button class="delete" onclick="commentDelete2();" title="삭제하기"></button>
+                            예매하기 버튼을 클릭 후 이용하실 수 있습니다~ 좋은 공연 관람 되세요:)</p>
                     </div>
                     <div class="commentImg">
                         <div class="commentImgCard">
@@ -210,7 +211,7 @@
                             <span class="favicon">&nbsp;2022년 7월4일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                         </span>
                         <p>재밌는 공연 추천해주셔서 감사합니다~<br>
-                        공연은 어디서 관람할 수 있나요??</p>
+                            공연은 어디서 관람할 수 있나요??</p>
                         <button class="delete" onclick="commentDelete3();" title="삭제하기"></button>
                     </div>
                 </div>
@@ -224,8 +225,7 @@
                             <span class="favicon">&nbsp;2022년 7월5일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                         </span>
                         <p>2022년 8월 27일 토요일 3시 7시에 안산문화예술의전당<br>
-                        달맞이극장에서 만나보실 수 있습니다. 감사합니다~^^</p>
-                        <button class="delete" onclick="commentDelete4();" title="삭제하기"></button>
+                            달맞이극장에서 만나보실 수 있습니다. 감사합니다~^^</p>
                     </div>
                     <div class="commentImg">
                         <div class="commentImgCard">
@@ -262,8 +262,7 @@
                     <form>
                         <input type="text" placeholder="이름을 입력하세요"><br>
                         <input type="email" name="email" id="email" placeholder="이메일을 입력하세요"><br>
-                        <textarea name="commentMessage" id="commentMessage" 
-                            placeholder="댓글 내용을 입력하세요."></textarea>
+                        <textarea name="commentMessage" id="commentMessage" placeholder="댓글 내용을 입력하세요."></textarea>
                         <div class="commentButtonBox">
                             <button class="commentSubject">post</button>
                         </div>
@@ -282,7 +281,9 @@
                     <a href="index.html"><img src="img/postBlog/danwon.jpg" alt="popular"></a>
                 </div>
                 <div id="popularContent">
-                    <a href="index.html"><h2>미디어 아트로 만나는 단원 김흥도를 관람하고...</h2></a>
+                    <a href="index.html">
+                        <h2>미디어 아트로 만나는 단원 김흥도를 관람하고...</h2>
+                    </a>
                     <span>
                         <a href="index.html">#전시회</a>&nbsp;
                         <a href="index.html">#김흥도</a>&nbsp;
@@ -302,7 +303,9 @@
             <div id="popularPosts">
                 <h3>posts</h3>
                 <div class="subPosts">
-                    <a href="index.html"><h2>생텍쥐페리와 만나는 어린왕자</h2></a>
+                    <a href="index.html">
+                        <h2>생텍쥐페리와 만나는 어린왕자</h2>
+                    </a>
                     <span>
                         <a href="index.html">#뮤지컬</a>&nbsp;
                         <a href="index.html">#어린왕자</a>&nbsp;
@@ -319,7 +322,9 @@
                     </span>
                 </div>
                 <div class="subPosts">
-                    <a href="index.html"><h2>No.1 마술사 최현우의 멘탈 매직</h2></a>
+                    <a href="index.html">
+                        <h2>No.1 마술사 최현우의 멘탈 매직</h2>
+                    </a>
                     <span>
                         <a href="index.html">#멘탈매직</a>&nbsp;
                         <a href="index.html">#2022</a>&nbsp;
@@ -336,7 +341,9 @@
                     </span>
                 </div>
                 <div class="subPosts">
-                    <a href="index.html"><h2>한여름 콘서트 플레이리스트</h2></a>
+                    <a href="index.html">
+                        <h2>한여름 콘서트 플레이리스트</h2>
+                    </a>
                     <span>
                         <a href="index.html">#콘서트시리즈</a>&nbsp;
                         <a href="index.html">#처음</a>&nbsp;
@@ -367,16 +374,24 @@
             <div id="category">
                 <h3>Category</h3>
                 <div class="subCategory">
-                    <a href="index.html"><h3>공연 / 전시 소개</h3></a>
+                    <a href="index.html">
+                        <h3>공연 / 전시 소개</h3>
+                    </a>
                 </div>
                 <div class="subCategory">
-                    <a href="index.html"><h3>공연 / 전시 공지</h3></a>
+                    <a href="index.html">
+                        <h3>공연 / 전시 공지</h3>
+                    </a>
                 </div>
                 <div class="subCategory">
-                    <a href="index.html"><h3>공연 / 전시 후기</h3></a>
+                    <a href="index.html">
+                        <h3>공연 / 전시 후기</h3>
+                    </a>
                 </div>
                 <div class="subCategory">
-                    <a href="index.html"><h3>Staff의 일상</h3></a>
+                    <a href="index.html">
+                        <h3>Staff의 일상</h3>
+                    </a>
                 </div>
             </div>
             <div id="tag">
@@ -399,7 +414,10 @@
             <div id="map">
                 <h3>Map</h3>
                 <div id="mapBox">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12691.997379674227!2d126.8228601!3d37.3188432!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x446cee67d1bdd845!2z7JWI7IKw66y47ZmU7JiI7Iig7J2Y7KCE64u5!5e0!3m2!1sko!2skr!4v1656657414453!5m2!1sko!2skr" width="100%" height="100%" border-radius="10px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12691.997379674227!2d126.8228601!3d37.3188432!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x446cee67d1bdd845!2z7JWI7IKw66y47ZmU7JiI7Iig7J2Y7KCE64u5!5e0!3m2!1sko!2skr!4v1656657414453!5m2!1sko!2skr"
+                        style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
